Add initializeCommand script and update devcontainer configuration for X11 forwarding

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,5 +3,6 @@
   "dockerComposeFile": "docker-compose.yml",
   "service": "dev",
   "workspaceFolder": "/workspace",
-  "remoteUser": "vscode"
+  "remoteUser": "vscode",
+  "initializeCommand": "chmod +x .devcontainer/initializeCommand.sh && .devcontainer/initializeCommand.sh"
 }
